<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/double_line_spacing"
            android:layout_marginTop="@dimen/double_line_spacing"
            android:layout_marginEnd="@dimen/double_line_spacing"
            android:contentDescription="@string/listmelogo"
            app:layout_constraintBottom_toTopOf="@id/horizontalGuideline50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pencilWithText" />

        <Button
            android:id="@+id/home_host_button"
            style="@style/ListMe_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/host"
            app:elevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/home_guest_button"
            app:layout_constraintEnd_toEndOf="@+id/Logo"
            app:layout_constraintStart_toStartOf="@+id/Logo"
            app:layout_constraintTop_toBottomOf="@+id/Logo"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/home_guest_button"
            style="@style/ListMe_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            app:layout_constraintBottom_toTopOf="@+id/home_manual_button"
            app:layout_constraintEnd_toEndOf="@+id/home_host_button"
            app:layout_constraintStart_toStartOf="@+id/home_host_button"
            app:layout_constraintTop_toBottomOf="@+id/home_host_button" />

        <Button
            android:id="@+id/home_manual_button"
            style="@style/ListMe_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/side_margin"
            android:text="@string/manual"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/home_guest_button"
            app:layout_constraintStart_toStartOf="@+id/home_guest_button"
            app:layout_constraintTop_toBottomOf="@+id/home_guest_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideLine50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline75"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>